--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,26 @@
 {
-    "manifest_version": 3,
-    "name": "Custom Video Playback Extension",
-    "version": "1.0",
-    "permissions": ["activeTab", "scripting", "tabs"],
-    "action": {
-      "default_popup": "popup.html"
-    },
-    "content_scripts": [
-        {
-          "matches": ["<all_urls>"],
-          "js": ["content.js"]
-        }
-      ]
-  }
-  
+  "manifest_version": 3,
+  "name": "Custom Video Playback Extension",
+  "version": "1.0",
+  "permissions": [
+    "activeTab",
+    "scripting",
+    "tabs",
+    "webRequest",
+    "declarativeNetRequest",
+    "storage"
+  ],
+  "host_permissions": ["<all_urls>"],
+  "action": {
+    "default_popup": "popup.html"
+  },
+  "background": {
+    "service_worker": "service_worker.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ]
+}
